[project]
name = "wamid"
version = "0.1.0"
description = "Personal-narrative CLI: log work, summarize via LLM, store in SQLite."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "libsql-client>=0.3.1",
    "pydantic-settings>=2.6.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
dev = [
    "pytest>=8.3",
]

[project.scripts]
wamid = "wamid.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wamid"]
